--- a/.classpath
+++ b/.classpath
@@ -12,5 +12,5 @@
 	<classpathentry exported="true" kind="var" path="ARCGIS_FOR_ANDROID/jackson-core-lgpl-1.6.3.jar"/>
 	<classpathentry exported="true" kind="var" path="ARCGIS_FOR_ANDROID/jackson-mapper-lgpl-1.6.3.jar"/>
 	<classpathentry exported="true" kind="var" path="ARCGIS_FOR_ANDROID/ArcGIS_SG.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
